--- a/package.json
+++ b/package.json
@@ -14,49 +14,75 @@
     "@fullcalendar/interaction": "6.1.8",
     "@fullcalendar/react": "6.1.8",
     "@fullcalendar/timegrid": "6.1.8",
+    "@hookform/devtools": "4.3.1",
     "@hookform/resolvers": "3.3.4",
     "@mui/base": "5.0.0-beta.32",
-    "@mui/icons-material": "^5.15.19",
+    "@mui/icons-material": "5.15.5",
+    "@mui/lab": "5.0.0-alpha.161",
     "@mui/material": "5.15.5",
     "@mui/styles": "5.15.5",
     "@mui/system": "5.15.5",
+    "@mui/utils": "5.15.5",
+    "@mui/x-data-grid": "6.18.7",
     "@mui/x-date-pickers": "6.19.0",
     "@popperjs/core": "2.11.8",
     "@reduxjs/toolkit": "2.2.1",
+    "apexcharts": "3.45.1",
     "autosuggest-highlight": "3.3.4",
     "aws-amplify": "^6.0.25",
     "axios": "1.6.5",
     "axios-mock-adapter": "1.21.5",
     "clsx": "2.1.0",
+    "core-js": "3.35.0",
     "crypto-js": "4.2.0",
     "date-fns": "2.30.0",
     "draft-js": "0.11.7",
     "draftjs-to-html": "0.9.1",
-    "firebase": "10.7.1",
+    "firebase": "^10.10.0",
     "framer-motion": "10.18.0",
+    "google-map-react": "2.2.1",
     "history": "5.3.0",
     "i18next": "23.7.16",
     "jwt-decode": "3.1.2",
+    "keycode": "2.2.1",
     "lodash": "4.17.21",
+    "marked": "4.3.0",
     "material-react-table": "2.12.1",
+    "material-ui-popup-state": "5.0.10",
     "mobile-detect": "1.4.5",
+    "mobx": "6.9.0",
     "moment": "2.29.4",
     "notistack": "1.0.6-next.3",
     "perfect-scrollbar": "1.5.5",
     "prismjs": "1.29.0",
+    "prop-types": "15.8.1",
     "qs": "6.11.2",
     "react": "18.2.0",
+    "react-apexcharts": "1.4.1",
     "react-app-alias": "2.2.2",
     "react-autosuggest": "10.1.0",
+    "react-beautiful-dnd": "13.1.1",
     "react-dom": "18.2.0",
     "react-draft-wysiwyg": "1.15.0",
+    "react-draggable": "4.4.5",
     "react-hook-form": "7.49.3",
     "react-i18next": "14.0.0",
+    "react-imask": "7.3.0",
+    "react-masonry-css": "1.0.16",
+    "react-number-format": "5.3.1",
     "react-popper": "2.3.0",
     "react-redux": "9.1.0",
     "react-router": "6.21.3",
     "react-router-dom": "6.21.3",
+    "react-spring": "9.7.3",
     "react-swipeable": "7.0.1",
+    "react-swipeable-views": "0.14.0",
+    "react-swipeable-views-utils": "0.14.0",
+    "react-transition-group": "4.4.5",
+    "react-virtualized": "9.22.5",
+    "react-virtuoso": "4.6.2",
+    "react-window": "1.8.10",
+    "redoc": "2.1.3",
     "redux-logger": "4.0.0",
     "reselect": "5.1.0",
     "styled-components": "6.1.8",
