--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "google-map-react": "2.2.1",
     "history": "5.3.0",
     "i18next": "23.7.16",
-    "jwt-decode": "3.1.2",
+    "jwt-decode": "^3.1.2",
     "keycode": "2.2.1",
     "lodash": "4.17.21",
     "marked": "4.3.0",
@@ -74,7 +74,7 @@
     "react-popper": "2.3.0",
     "react-redux": "9.1.0",
     "react-router": "6.21.3",
-    "react-router-dom": "6.21.3",
+    "react-router-dom": "^6.21.3",
     "react-spring": "9.7.3",
     "react-swipeable": "7.0.1",
     "react-swipeable-views": "0.14.0",
@@ -89,6 +89,7 @@
     "styled-components": "6.1.8",
     "stylis": "4.3.1",
     "stylis-plugin-rtl": "2.1.1",
+    "sweetalert2": "^11.11.1",
     "zod": "3.22.4"
   },
   "peerDependencies": {
